--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "@shopify/shopify-api": "^7.7.0",
     "compression": "^1.7.4",
     "cryptr": "^6.3.0",
+    "csvtojson": "^2.0.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.1",
     "mongoose": "^7.5.3",
     "ngrok": "^5.0.0-beta.2",
     "raviger": "^4.1.2",
